@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.4-3.003
-Date: 2025-06-07
+Version: 3.4-3.004
+Date: 2025-06-11
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -63,7 +63,7 @@ Authors@R: c(person("Adrian", "Baddeley",
              person("Tingting", "Zhan",
 	            role="ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 3.1-2), spatstat.univar (>= 3.1-2), spatstat.geom (>= 3.3-6), spatstat.random (>= 3.3-2), stats, graphics, grDevices, utils, methods, nlme
+Depends: R (>= 3.5.0), spatstat.data (>= 3.1-2), spatstat.univar (>= 3.1-2), spatstat.geom (>= 3.4-1.010), spatstat.random (>= 3.3-2), stats, graphics, grDevices, utils, methods, nlme
 Imports: spatstat.utils (>= 3.1-0), spatstat.sparse (>= 3.1-0), goftest (>= 1.2-2), Matrix, abind
 Suggests: sm, gsl, locfit, spatial, fftwtools (>= 0.9-8), spatstat.linnet (>= 3.2-1), spatstat.model (>= 3.3-1), spatstat (>= 3.1-1)
 Description: Functionality for exploratory data analysis and nonparametric analysis of
