@@ -14,4 +14,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2024-10-22" "3.3-3" 235 525 0 31903 6364
 "2025-03-20" "3.4-0" 240 534 0 33260 6364
 "2025-05-21" "3.4-3" 240 537 0 33450 6364
-"2025-06-07" "3.4-3.003" 242 562 0 34427 6364
+"2025-06-11" "3.4-3.004" 242 562 0 34427 6364
